--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Mayank0255/Resume-Bot#readme",
   "dependencies": {
     "body-parser": "1.19.0",
+    "dotenv": "8.2.0",
     "express": "4.17.1"
   },
   "devDependencies": {
