--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
-    "express": "4.17.1"
-  },
-  "devDependencies": {
+    "express": "4.17.1",
     "nodemon": "2.0.4"
-  }
+  },
+  "devDependencies": {}
 }
