--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "nodemon": "2.0.4"
+    "nodemon": "2.0.4",
+    "request": "2.88.2"
   },
   "devDependencies": {}
 }
