--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
+    "ejs": "3.1.3",
     "express": "4.17.1",
+    "http": "0.0.1-security",
     "nodemon": "2.0.4",
+    "path": "0.12.7",
     "request": "2.88.2"
   },
   "devDependencies": {}
