--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "8.2.0",
     "ejs": "3.1.3",
     "express": "4.17.1",
+    "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "nodemon": "2.0.4",
     "path": "0.12.7",
