feat: archiver setup

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Mayank0255/Resume-Bot#readme",
   "dependencies": {
+    "archiver": "5.0.0",
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
     "ejs": "3.1.3",
