feat: zip folder setup

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "http": "0.0.1-security",
     "nodemon": "2.0.4",
     "path": "0.12.7",
-    "request": "2.88.2"
+    "request": "2.88.2",
+    "zip-folder": "1.0.0"
   },
   "devDependencies": {}
 }
