--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "morgan": "1.10.0",
     "nodemon": "2.0.4",
     "path": "0.12.7",
     "request": "2.88.2",
