--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/Mayank0255/Resume-Bot#readme",
   "dependencies": {
     "body-parser": "1.19.0",
+    "compression": "1.7.4",
     "dotenv": "8.2.0",
     "ejs": "3.1.3",
     "express": "4.17.1",
     "fs": "0.0.1-security",
+    "helmet": "4.1.0",
     "http": "0.0.1-security",
     "morgan": "1.10.0",
     "nodemon": "2.0.4",
